--- a/app/src/main/res/layout/activity_manual_releases.xml
+++ b/app/src/main/res/layout/activity_manual_releases.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.business.ManualReleasesActivity"
-    android:background="@color/et_bg_gray">
+    android:background="@color/et_bg_gray"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,17 +26,19 @@
                 android:orientation="vertical"
                 android:paddingStart="@dimen/_21sdp"
                 android:paddingTop="@dimen/_45sdp"
-                android:paddingRight="@dimen/_21sdp"
+                android:paddingEnd="@dimen/_21sdp"
                 android:paddingBottom="@dimen/_16sdp">
 
                <LinearLayout
+                   android:id="@+id/llx"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/closeBtnIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:src="@drawable/ic_close" />
+                       android:src="@drawable/ic_close"
+                       android:contentDescription="@string/reserve_releases"/>
                </LinearLayout>
 
                 <TextView
@@ -43,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_14sdp"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="Reserve Releases"
+                    android:text="@string/reserve_releases"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16ssp" />
 
@@ -66,7 +69,8 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginStart="@dimen/_9sdp"
-                            android:src="@drawable/ic_search_icon" />
+                            android:src="@drawable/ic_search_icon"
+                            android:contentDescription="@string/search_by_reserve_id"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -83,16 +87,16 @@
                                 android:cursorVisible="true"
                                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                                 android:fontFamily="@font/opensans_regular"
-                                android:hint="Search By Reserve ID"
+                                android:hint="@string/search_by_reserve_id"
                                 android:imeOptions="actionDone"
                                 android:maxLength="35"
                                 android:maxLines="1"
                                 android:singleLine="true"
+                                android:inputType="text"
                                 android:textColor="@color/primary_black"
                                 android:textColorHint="@color/dark_grey"
                                 android:textCursorDrawable="@drawable/cursor_color"
                                 android:textSize="@dimen/_11ssp" />
-
 
                         </LinearLayout>
                     </LinearLayout>
@@ -127,6 +131,7 @@
 
 
                     <LinearLayout
+                        android:id="@+id/manualReleasesLL"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -139,7 +144,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Manual Releases"
+                            android:text="@string/manual_releases"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp"
                             android:visibility="visible" />
@@ -147,6 +152,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_down"
+                            android:contentDescription="@string/manual_releases"
                             android:layout_marginStart="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_2sdp"/>
 
@@ -170,7 +176,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="Reason field on the manual \nrelease flow. Limited to 120char \nand this is exactly 121 characters \nhere including the spaces."
+                            android:text="@string/reason_field"
                             android:textColor="@color/primary_black"
                             android:layout_weight="1"
                             android:textSize="@dimen/_11ssp" />
@@ -179,8 +185,7 @@
                             android:layout_width="@dimen/_72sdp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="10,000.00"
-                            android:gravity="right"
+                            android:gravity="end"
                             android:singleLine="true"
                             android:textColor="@color/active_green"
                             android:textSize="@dimen/_12ssp" />
@@ -197,7 +202,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Business Token Account"
+                            android:text="@string/business_token_account"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_9ssp" />
 
@@ -205,9 +210,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="06/23/2021 @ 2:20am"
                             android:fontFamily="@font/opensans_semibold"
-                            android:gravity="right"
+                            android:gravity="end"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_9ssp" />
                     </LinearLayout>
@@ -228,7 +232,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="Reason field on the manual \nrelease flow. "
+                            android:text="@string/reason_field_on_the_manual_release_flow"
                             android:textColor="@color/primary_black"
                             android:layout_weight="1"
                             android:textSize="@dimen/_11ssp" />
@@ -237,8 +241,7 @@
                             android:layout_width="@dimen/_72sdp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="10,000.00"
-                            android:gravity="right"
+                            android:gravity="end"
                             android:singleLine="true"
                             android:textColor="@color/active_green"
                             android:textSize="@dimen/_12ssp" />
@@ -254,7 +257,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Business Token Account"
+                            android:text="@string/business_token_account"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_9ssp" />
 
@@ -262,9 +265,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="06/23/2021 @ 2:20am"
                             android:fontFamily="@font/opensans_semibold"
-                            android:gravity="right"
+                            android:gravity="end"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_9ssp" />
                     </LinearLayout>
