--- a/app/src/main/res/layout/edit_delete_dialog.xml
+++ b/app/src/main/res/layout/edit_delete_dialog.xml
@@ -15,15 +15,13 @@
         android:background="@drawable/bg_core_colorfill" />
 
     <LinearLayout
-        android:id="@+id/scanLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
         android:layout_marginRight="@dimen/_20sdp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingTop="@dimen/_12sdp"
-        android:paddingBottom="@dimen/_10sdp">
+        android:paddingTop="@dimen/_12sdp">
 
         <ImageView
             android:layout_width="@dimen/_23sdp"
@@ -54,7 +52,6 @@
 
 
     <LinearLayout
-        android:id="@+id/receivePaymentLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_20sdp"
