--- a/app/src/main/res/layout/activity_additional_benifitial_owners.xml
+++ b/app/src/main/res/layout/activity_additional_benifitial_owners.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,9 +8,80 @@
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.business.AdditionalBeneficialOwnersActivity">
 
-    <ScrollView
+    <LinearLayout
+        android:id="@+id/topLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/backIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_45sdp"
+            android:layout_marginBottom="@dimen/_13sdp"
+            android:src="@drawable/ic_close" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="Additional Beneficial Owner(s)"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_21sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:text="@string/Beneficialownership"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_11ssp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/BeneficialOwneruntil"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_bold"
+                android:text="@string/percentage"
+                android:textColor="@color/primary_green"
+                android:textSize="@dimen/_11ssp" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="@string/greater"
+            android:textColor="@color/primary_green"
+            android:textSize="@dimen/_11ssp" />
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/buttonCV"
+        android:layout_below="@+id/topLL"
         android:scrollbars="none">
 
         <LinearLayout
@@ -18,121 +89,27 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/beneficialOwnersRV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/backIV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_21sdp"
-                    android:layout_marginTop="@dimen/_45sdp"
-
-                    android:layout_marginBottom="@dimen/_13sdp"
-                    android:src="@drawable/ic_close" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_20sdp"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="Additional Beneficial Owner(s)"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_16ssp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_21sdp"
-                    android:layout_marginTop="@dimen/_21sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:text="@string/Beneficialownership"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_21sdp"
-                        android:fontFamily="@font/opensans_regular"
-                        android:text="@string/BeneficialOwneruntil"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_11ssp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="@string/percentage"
-                        android:textColor="@color/primary_green"
-                        android:textSize="@dimen/_11ssp" />
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_21sdp"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="@string/greater"
-                    android:textColor="@color/primary_green"
-                    android:textSize="@dimen/_11ssp" />
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_11sdp"
-                android:layout_marginTop="@dimen/_14sdp"
-                android:background="@drawable/corner_bg_lt1"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_20sdp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_16sdp"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:text="Johnathan Joestar"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_12ssp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_2sdp"
-                        android:fontFamily="@font/opensans_regular"
-                        android:text="35% Ownership"
-                        android:textColor="@color/dark_gray"
-                        android:textSize="@dimen/_9ssp" />
-
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_249sdp"
-                    android:layout_marginTop="@dimen/_26sdp"
-                    android:layout_marginEnd="@dimen/_11sdp"
-                    android:src="@drawable/ic_chevron_right" />
-
-            </RelativeLayout>
+                android:visibility="visible"/>
 
             <TextView
+                android:id="@+id/notFoundTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="center"
+                android:text="No Beneficial Owner is found"
+                android:textColor="@color/xdark_gray"
+                android:textSize="@dimen/_12ssp"
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/_21sdp"/>
+
+            <TextView
+                android:id="@+id/percentageTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_21sdp"
@@ -142,12 +119,14 @@
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
 
-            <RelativeLayout
+            <LinearLayout
+                android:id="@+id/addNewBOLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_14sdp"
                 android:background="@drawable/corner_bg_lt"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -156,6 +135,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:layout_marginBottom="@dimen/_20sdp"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -173,53 +153,41 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@string/ownership"
                         android:textColor="@color/dark_gray"
-                        android:textSize="@dimen/_9ssp" />
+                        android:textSize="@dimen/_10ssp" />
 
                 </LinearLayout>
 
                 <ImageView
-                    android:layout_width="@dimen/_6sdp"
-                    android:layout_height="@dimen/_9sdp"
-                    android:layout_marginStart="@dimen/_249sdp"
-                    android:layout_marginTop="@dimen/_25sdp"
-                    android:layout_marginEnd="@dimen/_11sdp"
-                    android:src="@drawable/ic_chevron_right" />
-
-            </RelativeLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/buttonCV"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_42sdp"
-
-                android:layout_marginHorizontal="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_129sdp"
-                app:cardBackgroundColor="@color/bg_inactive"
-                app:cardCornerRadius="@dimen/_21sdp"
-                tools:ignore="MissingClass">
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="@string/done"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp" />
-            </androidx.cardview.widget.CardView>
+                    android:layout_marginEnd="@dimen/_11sdp"
+                    android:src="@drawable/ic_rightarrow" />
 
-            <TextView
-                android:id="@+id/buttom_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:layout_marginBottom="@dimen/_34sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/Savedautomatically"
-                android:textAlignment="center"
-                android:textColor="@color/dark_gray"
-                android:textSize="@dimen/_11ssp" />
+            </LinearLayout>
         </LinearLayout>
+
     </ScrollView>
-</LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/buttonCV"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_42sdp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginHorizontal="@dimen/_21sdp"
+        android:layout_marginBottom="@dimen/_34sdp"
+        app:cardBackgroundColor="@color/bg_inactive"
+        app:cardCornerRadius="@dimen/_21sdp"
+        tools:ignore="MissingClass">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/opensans_bold"
+            android:text="@string/done"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_12ssp" />
+
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
