PT changes for Buy and Withdraw tokens

--- a/app/src/main/res/layout/activity_gift_card_binding_layout.xml
+++ b/app/src/main/res/layout/activity_gift_card_binding_layout.xml
@@ -23,4 +23,9 @@
         layout="@layout/withdraw_token_trans_inprogress"
         android:visibility="gone" />
 
+    <include
+        android:id="@+id/buyInProgressContainer"
+        layout="@layout/buy_token_transaction_in_progress"
+        android:visibility="gone" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
